--- a/sites/all/themes/diszkont/css/styles.css
+++ b/sites/all/themes/diszkont/css/styles.css
@@ -180,6 +180,27 @@ body {
   background-repeat: repeat-x;
 }
 
+body.page-node div.views-field.views-field-field-akciosar, body.page-node div.views-field.views-field-field-szazalek {
+  margin-top: -10px !important;
+}
+
+body.page-search-products div.views-field.views-field-field-ar {
+clear: both;
+margin-bottom: 10px;
+margin-left: 0px !important;
+margin-top: 0px !important;
+max-height: 8px !important;
+}
+
+body.page-search-products div.views-field.views-field-field-akciosar, body.page-search-products div.views-field.views-field-field-szazalek {
+  margin-top: -20px;
+}
+
+body.page-search-products div.views-field.views-field-field-olcsobban {
+  clear: both;
+  margin: -15px 10px 0 0 !important;
+}
+
 input.element-remove {
   display: none !important;
 }
@@ -2902,11 +2923,13 @@ margin: 30px -30px;
 min-height: 320px;
 }
 
-#colorbox div.views-field.views-field-field-ar, body.page-node div.views-field.views-field-field-ar  {
+body.page-node div.views-field.views-field-field-ar  {
   text-decoration: line-through;
   text-align: center;
   float: left;
-  margin: 0 20% -4px 10%;
+  clear: both;
+  margin: 8px 0 10px 1%;
+  font-size: 12px;
 }
 
 #colorbox div.views-field.views-field-field-akciosar, body.page-node div.views-field.views-field-field-akciosar {
@@ -2932,7 +2955,7 @@ body.page-node div.views-field.views-field-field-szazalek {
 body.page-node div.views-field.views-field-field-olcsobban {
 font-size: 12px;
 float: right;
-margin: -4.2% 0 0 0;
+margin: 7px 0 0 0;
 text-align: center;
 }
 
