--- a/sites/all/modules/custom/matrix/css/matrix_compare_page.css
+++ b/sites/all/modules/custom/matrix/css/matrix_compare_page.css
@@ -132,8 +132,8 @@ input[type=number]::-webkit-outer-spin-button {
 
 
 .summary-row {
-    /*position: absolute;*/
-    background: wheat;
+    /*position: absolute;
+    background: wheat; */
     width: 100%;
     font-size: 2em;
 }
