--- a/sites/all/themes/diszkont/css/styles.css
+++ b/sites/all/themes/diszkont/css/styles.css
@@ -180,11 +180,48 @@ body {
   background-repeat: repeat-x;
 }
 
+h2.block-title, .panel-col-last h2.pane-title {
+margin: 0 3%;
+}
+
+div.alert.alert-block.alert-danger.messages.error {
+  display: none;
+}
+
+body#pid-matrix input[value="-"] {
+margin-top: 6px !important;
+}
+
+body.node-type-order h1.page-header {
+display:none;
+}
+
+body.node-type-order .alert-success {
+font-family: 'Lato';
+font-weight: 700;
+font-size: 16px;
+color: #262735;
+}
+
+body.node-type-order td {
+padding: 12px;
+font-family: 'Lato';
+font-weight: 700;
+font-size: 12px;
+color: #262735;
+}
+
+
+body#pid-matrix input.matrix_val_change, input.cart-inline-minus, input.cart-minus  {
+position:relative;
+z-index:10;
+}
+
 label.printmail-label {
   font-size: 14px;
 }
 
-body.page-node .region-content{padding-top: 35px;}
+body.page-node .region-content{padding-top: 25px;}
 
 body.page-taxonomy-term div.views-field.views-field-field-ar + div.views-field.views-field-field-olcsobban
 
@@ -830,6 +867,8 @@ text-align: center;
 	font-size: 20px;
 	letter-spacing: 2px;
 	color: #262735;
+	margin-top: 20px;
+	margin-bottom: 10px
   
 }
 
@@ -1009,6 +1048,7 @@ padding: 0 !important;
 body#pid-matrix-cart  #discount-cart  .delete-shop {
   display: block;
   margin-top: -28px;
+  cursor: pointer;
 }
 
 body#pid-matrix-cart #discount-cart div.markup.cell {
@@ -1247,7 +1287,7 @@ body#pid-matrix .cell::nth-of-type(1) .matrix_cart_button {
 
 body.page-node .field-name-field-kategoria {
   width: 94%;
-  height: 50px;
+  height: 42px;
   font-family: "Lato";
   font-weight: 400;
   font-size: 14px;
@@ -1257,7 +1297,7 @@ body.page-node .field-name-field-kategoria {
   z-index: 50;
   left: 35px;
   background-image: url('http://jokosar.hu/sites/all/themes/diszkont/images/dotted-line.svg');
-  background-position: 0px 42px;
+  background-position: 0px 40px;
   background-repeat: repeat-x;
   }
 
@@ -1519,13 +1559,13 @@ body#pid-matrix-cart .shop-block.matrix_cart {
 
 .starter_cell input.check {
 padding: 0;
-margin: 48% 42%;
+margin: 42% 42%;
 float: none; }
 
 input.check  {
-    opacity:0;
-    height: 20px;
-    width: 20px;
+    opacity:0.01;
+    height: 30px;
+    width: 30px;
     position: relative;
     z-index: 2;
     top: 0%;
@@ -1872,7 +1912,7 @@ body#pid-osszes-akcio .totals-row label, body.page-taxonomy-term- .totals-row la
   font-size: 12px;
   color: #262735;
    background-image: url('http://jokosar.hu/sites/all/themes/diszkont/images/dotted-line.svg');
-   background-position: 0px 22px;
+   background-position: 0px 18px;
    background-repeat: repeat-x;
    float: left;
    margin-top: 20px;
@@ -2040,11 +2080,11 @@ line-height: 1;
 
 .exposed_filter_data {
   background-image: url('http://jokosar.hu/sites/all/themes/diszkont/images/dotted-line.svg');
-  background-position: 0px 30px;
+  background-position: 0px 25px;
   background-repeat: repeat-x;
   margin: 0 10px;
   border: 0px;
-  height: 35px !important;
+  height: 27px !important;
 }
 
 .page-header h1 {
@@ -2200,6 +2240,8 @@ body#pid-matrix input.matrix_val_change {
 margin-right: 2px;
 font-size: 16px;
 margin-top: 8px;
+min-width: 12px;
+min-height: 12px;
 }
 
 body#pid-matrix input.matrix_val_change[value="+"] {
@@ -2460,7 +2502,7 @@ font-weight: 700;
 font-size: 16px;
 color: #262735;
 background-image: url('http://jokosar.hu/sites/all/themes/diszkont/images/dotted-line.svg');
-background-position: 0 22px;
+background-position: 0 17px;
 background-repeat: repeat-x;
 margin-top: 0px;
 margin-bottom: 0px;
@@ -2498,7 +2540,7 @@ margin-top: 30px;
 }
 
 body.page-node .region-sidebar-second {
-margin-top: 60px;
+margin-top: 50px;
 }
 
 body.not-front .col-sm-12 {
@@ -2522,7 +2564,11 @@ ol.ui-slider-scale li:last-of-type {
 }
 
 .view-osszes-akcio .view-content {
-padding-top:25px;
+padding-top:25px; 
+}
+
+body#pid-osszes-akcio .view-osszes-akcio .view-header {
+padding-bottom: 0px;
 }
 
 .view-taxonomy-page .view-content {
@@ -2531,7 +2577,7 @@ margin-top: -25px;
 
 .view-taxonomy-page .view-header {
 background-image: url('http://jokosar.hu/sites/all/themes/diszkont/images/dotted-line.svg');
-background-position: 0px 55px;
+background-position: 0px 50px;
 background-repeat: repeat-x;
 height: 60px !important;
 margin-top: -45px;
@@ -5086,4 +5132,19 @@ div.form-item.form-type-select.form-item-sort-bef-combine-szuresek {
 
 
 
+}
+
+@-moz-document url-prefix() { 
+  body#pid-matrix-cart .no-width input.cart-plus {
+  margin-left: 7px;
+}
+
+input[type=number] {
+    -moz-appearance:textfield;
+}
+
+body.page-taxonomy-term #szuresek {
+    margin-top: -2.4%;
+    padding-right: 7%;
+}
 }
