--- a/sites/all/modules/custom/matrix/css/matrix_pdf.css
+++ b/sites/all/modules/custom/matrix/css/matrix_pdf.css
@@ -1,17 +1,67 @@
-.field-item {
-
-
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+    margin: 0;
+    padding: 0;
+    border: 0;
+    font-size: 100%;
+    font: inherit;
+    vertical-align: baseline;
 }
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure,
+footer, header, hgroup, menu, nav, section {
+    display: block;
+}
+body {
+    line-height: 1;
+}
+ol, ul {
+    list-style: none;
+}
+blockquote, q {
+    quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+    content: '';
+    content: none;
+}
+table {
+    border-collapse: collapse;
+    border-spacing: 0;
+}
+
+
+
+
+
+
+
+
 
 table {
     width: 100%;
-    padding: 20px;
+    border-collapse: collapse;
+    border-spacing: 0;
+    padding: 6px;
+
 }
 
 td {
     text-align: right !important;
-    padding: 10px !important;
 }
+
 
 .shop-header {
     padding: 10px !important;
@@ -19,8 +69,9 @@ td {
 
 tr td {
   border-bottom: 1px solid #ccc;
-  height: 0px;
+  padding: 10px;
 }
+
 
 tr:last-child td {
     border-bottom: 1px dotted #ccc;
@@ -40,10 +91,9 @@ td.price, td.weight, td.amount, td.cart-sum-weight, td.cart-sum-price {
     width: 15% !important;
 }
 
-
-
-
-
+td.totals {
+    width: 60%;
+}
 
 
 header h2 {
@@ -53,16 +103,17 @@ header h2 {
 .print-logo {
     padding: 10px;
     text-align: center;
+    height: 100px;
 }
 
 
 
 .print-logo img {
     margin: 0 auto;
-    width: 200px;
+    width: 100px;
 
 }
 
-td.totals {
-    width: 60%;
-}
+
+
+
