--- a/sites/all/themes/diszkont/css/styles.css
+++ b/sites/all/themes/diszkont/css/styles.css
@@ -1333,6 +1333,7 @@ float: left;
 margin-top: 3px !important;
 text-align: left !important;
 margin-left: 0px !important; 
+margin-right: 0px !important;
 }
 
 body.page-node- #discount-cart .cart-row {
@@ -3226,7 +3227,7 @@ body#pid-koszonjuk div#block-menu-menu-f-men-.block.block-menu {
   display: none;
 }
 
-body#pid-koszonjuk h2 {
+body#pid-koszonjuk #block-system-main h2 {
   display: block;
   background: rgb(254,206,91);
   padding: 20px 20px 20px 20px;
@@ -3236,6 +3237,7 @@ body#pid-koszonjuk h2 {
   color: rgb(52, 52, 52);
   text-transform: uppercase;
   font-size: 16px;
+  margin-top: -20px;
 }
 
 body#pid-koszonjuk #block-nice-taxonomy-menu-ntm-1 h2.block-title {
@@ -3299,6 +3301,9 @@ body#pid-koszonjuk label {
   text-align: left !important;
   display: block;
   padding-left: 24px;
+  letter-spacing: 1.3px;
+  color: #262735;
+  font-weight: 400;
 }
 
 body#pid-koszonjuk input#mc-embedded-subscribe.button {
@@ -3318,6 +3323,7 @@ margin-top: 60px !important;
 
 body#pid-koszonjuk .clear {
   text-align: center;
+  clear: both;
 }
 
 body#pid-koszonjuk #block-mailchimp-signup-k-vesse-emailben-is-az-akci-kat {
@@ -4081,7 +4087,7 @@ body.page-node div.field.field-name-field-szazalek {
 body.page-node  div.field.field-name-field-olcsobban {
   text-align: right;
   clear: left;
-  width: 20%;
+  width: 25%;
   height: 17px;
   font-family: "Lato";
   font-weight: 400;
@@ -4610,7 +4616,7 @@ select#edit-sort-bef-combine-szuresek, select#edit-mefibs-form-rendezes-sort-by 
 
 body.page-taxonomy-term- select#edit-sort-bef-combine-szuresek, body.page-taxonomy-term- select#edit-mefibs-form-rendezes-sort-by {
 	top: -10px;
-	right: 60px;
+	right: 0px;
 	background: url('http://www.jokosar.hu/sites/all/themes/diszkont/images/szures.svg') no-repeat;
 	background-position: 100% 15px;
 	color: #535353;
@@ -6142,7 +6148,7 @@ body.page-node div.field.field-name-field-szazalek {
 }
 
 body#pid-matrix-cart input.cart-delete {
-  right: -50px;
+  right: -50px !important;
 }
 
 body#pid-matrix-cart .totals-row {
@@ -6151,6 +6157,10 @@ body#pid-matrix-cart .totals-row {
 
 body.page-node div.field.field-name-aruhaz {
   margin-top: 5%;
+}
+
+.piece-selector span.label {
+  margin-left: -12px;
 }
 
 }
@@ -6171,7 +6181,7 @@ left: calc(2em / 7 * 3) !important;
 @media screen and (min-width:1400px) {
 
 body#pid-osszes-akcio .cell input.cart-delete, body.page-taxonomy-term- .cell input.cart-delete  {
-left: calc(7em / 7 * 3) !important;
+left: calc(6em / 7 * 3) !important;
 }
 
 body.page-node .cell input.cart-delete  {
@@ -6187,6 +6197,30 @@ body#pid-matrix-cart .totals-row {
   width:84.9% !important;
 }
 
+body.page-node .matrix_cart_block span.cart-sum-price {
+  margin-left: 70%;
+}
+
+body.page-search-products .matrix_cart_block span.measurement:last-child {
+  margin-left: 87% !important;
+}
+
+.matrix_cart_block span.measurement:last-child {
+  margin-left: 88% !important;
+}
+
+body.page-search-products .matrix_cart_block span.cart-sum-price {
+  margin-left: 55% !important;
+}
+
+div.price.cell + div.markup.cell {
+  margin-left: 68%;
+}
+
+body#pid-matrix-cart  #discount-cart div.weight.cell, #discount-cart div.price.cell {
+  margin-left: 49%;
+}
+
 }
 
 @media screen and (min-width:1900px) {
@@ -6196,25 +6230,25 @@ body#pid-matrix-cart .totals-row {
 }
 
 body.page-search-products div.price.cell + div.markup.cell {
-  margin: -64px 0px 0 98%;
+  margin: -64px 0px 0 90%;
 }
 
 body.page-search-products #discount-cart div.price.cell {
-  margin-left: 50%;
+  margin-left: 44%;
+}
+
+body#pid-osszes-akcio .cell input.cart-delete, body.page-taxonomy-term- .cell input.cart-delete {
+  left: calc(7em / 7 * 3) !important;
 }
 
 body.page-search-products input.cart-delete {
-  left: calc(7em / 7 * 3);
+  left: calc(5em / 7 * 3) !important;
 }
 
 body.page-search-products .matrix_cart_block span.cart-sum-price {
-  margin-left: 60%;
-}
+margin-left: 60%;
 
-body.page-node .matrix_cart_block span.cart-sum-price {
-  margin-left: 70%;
 }
-
 }
 
 body.page-printmail .alert-success {
@@ -6237,4 +6271,19 @@ body.page-printmail .alert-success a {
 
 body.page-default-search-page div.views-exposed-form {
   height: auto !important;
+}
+
+
+div.mc-field-group.input-group.masodik input[type="radio"], div.mc-field-group.input-group.harmadik input[type="radio"]{
+    -webkit-appearance: checkbox; /* Chrome, Safari, Opera */
+    -moz-appearance: checkbox;    /* Firefox */
+    -ms-appearance: checkbox;     /* not currently supported */
+}
+
+div.mc-field-group.input-group.elso strong {
+  margin-top: 30px;
+}
+
+body.page-node div.field.field-name-field-egysegar .field-label {
+  font-weight: normal;
 }
