--- a/sites/all/themes/diszkont/css/styles.css
+++ b/sites/all/themes/diszkont/css/styles.css
@@ -1035,6 +1035,10 @@ body.page-taxonomy-term- .piece-selector span.label {
   margin-left: -20px;
 }
 
+body.page-search- .piece-selector span.label {
+  margin-left: -20px;
+}
+
 body.page-taxonomy-term .piece-unit, body.page-taxonomy-term .weight-unit {
   margin-left: -20px;
 }
@@ -1338,8 +1342,8 @@ margin-right: 0px !important;
 
 body.page-node- #discount-cart .cart-row {
   border-bottom: solid 1px #979797;
-  padding: 10px 10px 0px 10px;
-  margin: 0 10px;
+  padding: 10px 10px 0px 0px;
+  margin: 0 0 0 10px;
 }
 
 body#pid-matrix-cart #discount-cart .cart-row {
@@ -1350,8 +1354,9 @@ body#pid-matrix-cart #discount-cart .cart-row {
 }
 
 body.page-search-products #discount-cart .cart-row {
-  padding: 10px 10px 0px 10px;
+  padding: 10px 10px 0px 0px;
   height: auto;
+  margin-left: 10px;
 }
 
 body.page-search-products .weight-unit, body.page-search-products .piece-unit {
@@ -2193,7 +2198,8 @@ width: 46px;
   font-size: 16px;
   color: #ec4c43;
   float: left;
-  margin-left: -10%;
+  margin-left: -3.6%;
+  margin-right: -4%;
   margin-top: 35px;
 }
 
@@ -6014,7 +6020,7 @@ div.price.cell + div.markup.cell {
 }
 
 body.page-taxonomy-term- select#edit-sort-bef-combine-szuresek, body.page-taxonomy-term- select#edit-mefibs-form-rendezes-sort-by {
-  left:25px;
+  left:105%;
 }
 
 .ds-2col > .group-left {
@@ -6083,6 +6089,10 @@ body#pid-matrix-cart input.cart-delete {
 }
 
 @media screen and (min-width:1281px) and (max-width: 1366px) {
+
+body.page-taxonomy-term- select#edit-sort-bef-combine-szuresek, body.page-taxonomy-term- select#edit-mefibs-form-rendezes-sort-by {
+  left:70%;
+}
 
 .stickynav-active {
   width: 82.5% !important;
@@ -6181,7 +6191,7 @@ left: calc(2em / 7 * 3) !important;
 @media screen and (min-width:1400px) {
 
 body#pid-osszes-akcio .cell input.cart-delete, body.page-taxonomy-term- .cell input.cart-delete  {
-left: calc(6em / 7 * 3) !important;
+left: calc(7em / 7 * 3) !important;
 }
 
 body.page-node .cell input.cart-delete  {
@@ -6286,4 +6296,8 @@ div.mc-field-group.input-group.elso strong {
 
 body.page-node div.field.field-name-field-egysegar .field-label {
   font-weight: normal;
+}
+
+body#pid-matrix-cart div.amount-selector-popup {
+  margin-left: -20px;
 }
